# binder

./: build.py
examples/example_struct/: CMakeLists.txt  test_struct_lib.py
examples/simple_class/: make_bindings_via_bash.sh
examples/simple_class/include/: myts.hpp
examples/simple_class/include/test/: test_class.hpp
source/: CMakeLists.txt  function.hpp  util.cpp
